package org.example.AppEmployee;

public class Designer extends Employee {

    public void doTask(){
        System.out.println("Empleado realzando una génerica.");
    }

}
