package org.example.AppEmployee;

public class Employee {

    public void doTask(){
        System.out.println("Empleado realzando una génerica.");
    }

}
