package org.example.AppEmployee;

public class Manager extends Employee{

    public void doTask(){
        System.out.println("Empleado realzando una génerica.");
    }

}
