package org.example.AppEmployee;

public class Programmer extends Employee{

    public void doTask(){
        System.out.println("Escribiendo código y solucionando bugs.");
    }

}
